pkg/front_end/testcases/dart2js/mixin_from_opt_in/main.dart.weak.modular.expect
library;
import self as self;
import "test_lib.dart" as tes;

import "org-dartlang-testcase:///test_lib.dart";

static method main() → dynamic {
  tes::test();
}

library;
//
// Problems in library:
//
// pkg/front_end/testcases/dart2js/mixin_from_opt_in/test_lib.dart:10:27: Error: The value 'null' can't be assigned to the parameter type 'int' because 'int' is not nullable.
//   int j = sub.mixinMethod(null);
//                           ^
//
// pkg/front_end/testcases/dart2js/mixin_from_opt_in/test_lib.dart:10:15: Error: A value of type 'int?' can't be assigned to a variable of type 'int' because 'int?' is nullable and 'int' isn't.
//   int j = sub.mixinMethod(null);
//               ^
//
// pkg/front_end/testcases/dart2js/mixin_from_opt_in/test_lib.dart:12:25: Error: A value of type 'int?' can't be assigned to a variable of type 'int' because 'int?' is nullable and 'int' isn't.
//   sub.mixinField2 = sub.mixinField1;
//                         ^
//
import self as tes;
import "opt_out_lib.dart" as opt;
import "dart:core" as core;
import "opt_in_lib.dart" as opt2;

import "org-dartlang-testcase:///opt_out_lib.dart";

static method test() → dynamic {
  opt::SubClass sub = new opt::SubClass::•();
  core::int i = sub.{opt::_SubClass&Class&Mixin::classMethod}(null){(core::int*) →* core::int*};
  core::int j = invalid-expression "pkg/front_end/testcases/dart2js/mixin_from_opt_in/test_lib.dart:10:15: Error: A value of type 'int?' can't be assigned to a variable of type 'int' because 'int?' is nullable and 'int' isn't.
  int j = sub.mixinMethod(null);
              ^" in sub.{opt2::Mixin::mixinMethod}(invalid-expression "pkg/front_end/testcases/dart2js/mixin_from_opt_in/test_lib.dart:10:27: Error: The value 'null' can't be assigned to the parameter type 'int' because 'int' is not nullable.
  int j = sub.mixinMethod(null);
                          ^" in null as{TypeError} core::int){(core::int) → core::int?} as{TypeError} core::int;
  sub.{opt::_SubClass&Class&Mixin::classField2} = sub.{opt::_SubClass&Class&Mixin::classField1}{core::int*};
  sub.{opt2::Mixin::mixinField2} = invalid-expression "pkg/front_end/testcases/dart2js/mixin_from_opt_in/test_lib.dart:12:25: Error: A value of type 'int?' can't be assigned to a variable of type 'int' because 'int?' is nullable and 'int' isn't.
  sub.mixinField2 = sub.mixinField1;
                        ^" in sub.{opt2::Mixin::mixinField1}{core::int?} as{TypeError} core::int;
}
